Fix the lines placeholder taking up too much space
This fixes the issue caused by the increased number of
lines in the placeholder due to the use of `max-width: 0`;
the `max-width: 0` was used to prevent the placeholder from
expanding in width (due to the necessity of using `display:
inline-block` to animate font size reduction effectively;
instead the lines placeholder is now rendered with a single
character in each line which preserves the functionality
but frees use from both issues.

--- a/packages/completer/style/base.css
+++ b/packages/completer/style/base.css
@@ -218,6 +218,9 @@
   opacity: 0;
   display: inline-block;
   vertical-align: top;
+}
+
+.jp-GhostText-letterSpacer {
   max-width: 0;
 }
 
